# rcssserver_client

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  player.cpp  player.h  start.sh
src/formations/: kick_off_formation.txt
src/network/: client.cpp  client.h
src/parser/: formation_parser.cpp  formation_parser.h  server_message_parser.cpp  server_message_parser.h
src/worldmodel/: worldmodel.cpp  worldmodel.h
